# Simplepy

./: CNAME  LICENCE  README.md  pyproject.toml  setup.py
Simplepy/: __init__.py  main.py
Webpage/: .prettierrc.json  package-lock.json  package.json  tailwind.config.js
Webpage/Pages/: index.html  output.css
