[project]
name = "simplepy_package_pythonmohseni"
version = "0.0.1"
authors = [
  { name="Code your future team"},
]
description = "A package to make python easy"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pythonmohseni/Simplepy"
Issues = "https://github.com/pythonmohseni/Simplepy/issues"